# candle

./: .gitignore  COMPATIBILITY.md  Cargo.toml  GUIDE.md  PATTERNS.md  README.md  ROADMAP.md
candle-book/: Cargo.toml
candle-core/: Cargo.toml
candle-core-types/: Cargo.toml
candle-core-types/src/: device.rs  error.rs  lib.rs  metal_error.rs  op.rs
candle-core/src/: backend.rs  backprop.rs  conv.rs  custom_op.rs  device.rs  display.rs  dtype.rs  dummy_dtype.rs  dyn_backend.rs  error.rs  indexer.rs  kv_cache.rs  layout.rs  lib.rs  npy.rs  op.rs  pickle.rs  safetensors.rs  sampling.rs  scalar.rs  shape.rs  storage.rs  streaming.rs  strided_index.rs  tensor.rs  test_utils.rs  utils.rs  variable.rs
candle-core/src/cpu/: kernels.rs
candle-core/src/cpu_backend/: mod.rs
candle-core/src/cuda_backend/: device.rs
candle-core/src/metal_backend/: mod.rs
candle-core/src/quantized/: cuda.rs  ggml_file.rs  mod.rs
candle-core/tests/: quantized_tests.rs
candle-cpu-backend/: Cargo.toml
candle-cpu-backend/src/: conv2d.rs  lib.rs  ops.rs  utils.rs
candle-cublaslt/: Cargo.toml
candle-cublaslt/src/: lib.rs
candle-cuda-vmm/: Cargo.toml
candle-cuda-vmm/src/: error.rs  lib.rs  mapping.rs  physical_memory.rs  virtual_memory.rs
candle-datasets/: Cargo.toml
candle-datasets/src/: batcher.rs  lib.rs
candle-datasets/src/nlp/: tinystories.rs
candle-datasets/src/vision/: cifar.rs  fashion_mnist.rs  mnist.rs  mod.rs
candle-examples/: Cargo.toml
candle-examples/examples/custom-ops/: main.rs
candle-examples/examples/marian-mt/python/: requirements.txt
candle-examples/examples/z_image/: main.rs
candle-inference/: Cargo.toml
candle-inference/src/: chunked_prefill.rs  context_compress.rs  eviction.rs  kv_compress.rs  lib.rs  moe_routing.rs  prefix_cache.rs  scheduler.rs  segmented_eviction.rs  speculative.rs  streaming.rs  tiered_storage.rs  tool_call.rs
candle-nn/examples/: basic_optimizer.rs  cpu_benchmarks.rs
candle-nn/src/: activation.rs  batch_norm.rs  conv.rs  cpu_flash_attention.rs  embedding.rs  func.rs  fused_ops.rs  group_norm.rs  init.rs  kv_cache.rs  layer_norm.rs  lib.rs  linear.rs  lora.rs  loss.rs  moe.rs  ops.rs  optim.rs  quantizable_linear.rs  rnn.rs  rotary_emb.rs  sampling.rs  sequential.rs  training_context.rs  var_builder.rs  var_map.rs
candle-nn/tests/: optim.rs
candle-onnx/src/: eval.rs  lib.rs
candle-parallel/: Cargo.toml
candle-parallel/src/: comm.rs  distributed_cache.rs  lib.rs  pipeline_parallel.rs  tensor_parallel.rs  topology.rs
candle-pyo3/src/: lib.rs
candle-training/: Cargo.toml
candle-training/src/: checkpoint.rs  grad_accum.rs  grad_clip.rs  lib.rs  lr_scheduler.rs  training_loop.rs
candle-transformers/src/: fused_moe.rs  lib.rs  quantized_nn.rs  quantized_var_builder.rs  utils.rs
candle-transformers/src/generation/: mod.rs
candle-transformers/src/models/: mod.rs
candle-transformers/src/models/audio/: csm.rs  dac.rs  encodec.rs  metavoice.rs  parler_tts.rs  snac.rs
candle-transformers/src/models/common/: with_tracing.rs
candle-transformers/src/models/encoders/: bert.rs  debertav2.rs  distilbert.rs  jina_bert.rs  modernbert.rs  nomic_bert.rs  stella_en_v5.rs  xlm_roberta.rs
candle-transformers/src/models/llm/: based.rs  bigcode.rs  chatglm.rs  codegeex4_9b.rs  deepseek2.rs  falcon.rs  gemma.rs  gemma2.rs  gemma3.rs  glm4.rs  glm4_new.rs  granite.rs  granitemoehybrid.rs  helium.rs  llama.rs  llama2_c.rs  llama2_c_weights.rs  mamba.rs  mamba2.rs  marian.rs  mistral.rs  mixformer.rs  mixtral.rs  mpt.rs  olmo.rs  olmo2.rs  persimmon.rs  phi.rs  phi3.rs  qwen2.rs  qwen2_moe.rs  qwen3.rs  qwen3_moe.rs  recurrent_gemma.rs  rwkv_v5.rs  rwkv_v6.rs  rwkv_v7.rs  stable_lm.rs  starcoder2.rs  t5.rs  (+1 more)
candle-transformers/src/models/multimodal/: blip.rs  blip_text.rs  colpali.rs  mobileclip.rs  moondream.rs  (+2 more)
(+119 files in other folders)
