[package]
    categories  = ["science"]
    description = "CUBLASLt fused GEMM with activation/bias for the Candle ML framework."
    edition     = "2024"
    homepage    = "https://github.com/huggingface/candle"
    keywords    = ["blas", "machine-learning", "tensor"]
    license     = "MIT OR Apache-2.0"
    name        = "candle-cublaslt"
    repository  = "https://github.com/huggingface/candle"
    version     = "0.10.2"

[dependencies]
    candle = { path = "../candle-core", package = "candle-core", version = "0.10.2", features = [
        "cuda",
    ] }
    cudarc = { version = "0.19.4", features = ["cublaslt", "f16"] }
    half = { version = "2.3.1", features = ["num-traits"] }
