[package]
name = "candle-parallel"
version.workspace = true
edition.workspace = true
description = "Multi-GPU parallelism primitives for the Candle ML framework."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candle = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }

[dev-dependencies]

[features]
default = []
